minikube/namespace.yaml
apiVersion: apps/v1
kind: Namespace
metadata:
  name: alopez
  labels:
    api: apireticula
