minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apireticula
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.alopez.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apireticula
            port:
              number: 80
